split energy consumption basic/elevated